2008-11-18  Steffen Macke <sdteffen@sdteffen.de>

	* doc/en/dia.xml:
	* doc/eu/dia.xml:
	* doc/fr/dia.xml:
	* doc/pl/dia.xml: Consistently use DocBook 4.5 DTD from oasis-open.org
	
2008-11-16  Hans Breuer  <hans@breuer.org>

	* plug-ins/gprint/* : back to the attic
	* plug-ins/Makefile.am po/POTFILES.in configure.in : adjusted

	* plug-ins/cairo/diacairo.c : register "Edit/Copy Diagram" to copy
	the whole diagram into the clipboard (currently win32 only)

	* app/dia-props.c app/diapagelayout.c app/preferences.c
	  lib/dialogs.c lib/prop_geomtypes.c lib/prop_inttypes.c lib/widgets.c
	  objects/Database/table_dialog.c objects/SISSI/sissi_dialog.c
	  objects/UML/class_dialog.c : stop newer gtk+ complaining about 
	non-zero page size for spin buttons

2008-11-15  Steffen Macke <sdteffen@sdteffen.de>

	* makefile.msc:
	* installer/win32/dia.nsi:
	* installer/win32/wikifaq2installerfaq.sed: Small script to generate the
	installer FAQ file from the Wiki
	
2008-11-02  Hans Breuer  <hans@breuer.org>

	* objects/Istar/link.c objects/GRAFCET/vergent.c 
	  objects/Database/reference.c objects/Database/table_dialog.c
	  objects/UML/class_dialog.c : spelling fixes, bug #554233 and
	bug #554238 - Duarte Loreto

	* app/find-and-replace.c : no C++ comment and not other warnings

	* lib/text.c : ignore single carriage return, work around for bug #547173

	* lib/lib_dia. : removed (should never have been added)

	* plug-ins/UML/class_dialog.c : don't crash if the selection callbacks
	get called after dialog destruction. Fixes bug #558650
	
2008-10-17  Hans Breuer  <hans@breuer.org>

	* lib/libdia.def : export prop_list_add_list for ...
	* app/find-and-replace.c : patch from Johann Tienhaara adding the
	ability to find and/or replace (almost) any text content of the objects

	* plug-ins/dxf/dxf-import.c : dxfcode now calculated as inside the read 
	function, reduces code lines and en passant fixes load error of #321539
