@@ -402,7 +402,7 @@ largepackage_load(ObjectNode obj_node, int version, const char *filename)
   /* For compatibility with previous dia files. If no line_width, use
    * LARGEPACKAGE_BORDERWIDTH, that was the previous line width.
    */
-  attr = object_find_attribute(obj_node, "line_width");
+  attr = object_find_attribute(obj_node, PROP_STDNAME_LINE_WIDTH);
   if (attr == NULL)
     ((LargePackage*)obj)->line_width = LARGEPACKAGE_BORDERWIDTH;
 
