@@ -359,7 +359,7 @@ note_load(ObjectNode obj_node, int version, const char *filename)
   /* For compatibility with previous dia files. If no line_width, use
    * NOTE_BORDERWIDTH, that was the previous line width.
    */
-  attr = object_find_attribute(obj_node, "line_width");
+  attr = object_find_attribute(obj_node, PROP_STDNAME_LINE_WIDTH);
   if (attr == NULL)
     ((Note*)obj)->line_width = NOTE_BORDERWIDTH;
 
