@@ -409,7 +409,7 @@ smallpackage_load(ObjectNode obj_node, int version, const char *filename)
   /* For compatibility with previous dia files. If no line_width, use
    * SMALLPACKAGE_BORDERWIDTH, that was the previous line width.
    */
-  attr = object_find_attribute(obj_node, "line_width");
+  attr = object_find_attribute(obj_node, PROP_STDNAME_LINE_WIDTH);
   if (attr == NULL)
     ((SmallPackage*)obj)->line_width = SMALLPACKAGE_BORDERWIDTH;
 
