@@ -1,3 +1,12 @@
+2008-11-21  Hans Breuer  <hans@breuer.org>
+
+	* objects/custom_lines/custom_linetypes.c objects/Database/compound.c
+	  objects/Database/reference.c objects/Database/table.c
+	  objects/UML/actor.c objects/UML/class.c objects/UML/large_package.c
+	  objects/UML/note.c objects/UML/object.c objects/UML/small_package.c
+	  objects/UML/usecase.c : consitent use PROP_STDNAME_LINE_WIDTH instead
+	of "line_width", patch from Sameer Sahasrabuddhe
+
 2008-11-18  Steffen Macke <sdteffen@sdteffen.de>
 
 	* doc/en/dia.xml:
